@@ -20,3 +20,4 @@
 # Import C++ Plus Modules for CMake Build
 
 include("${moduledir}/nls-util.cmake")
+include("${moduledir}/cppp-platform.cmake")
