@@ -23,9 +23,11 @@ macro(cppp_import_nls_util path)
     add_subdirectory("${path}")
 endmacro()
 
-if(NOT TARGET build_nls_${PROJECT_NAME})
-    add_custom_target(build_nls_${PROJECT_NAME} ALL DEPENDS nls-util/nls-util)
-endif()
+function(cppp_init_nls_util)
+    if(NOT TARGET build_nls_${PROJECT_NAME})
+        add_custom_target(build_nls_${PROJECT_NAME} ALL DEPENDS nls-util/nls-util)
+    endif()
+endfunction()
 
 function(cppp_nls_translate file langmap)
     if(MSVC)
