@@ -1,3 +1,7 @@
+2023-08-25	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	Remove '${srcdir}' '${outdir}'.
+
 2023-08-24	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Optimize structure and import methods.
